# smart-fitly-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: code-agent.yml  feedback-loop.yml  reviewer-agent.yml
alembic/: env.py
alembic/versions/: aeb62f7a6c77_init_schema.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/v1/: __init__.py  health.py
backend/app/models/: __init__.py  checkin.py  daily.py  goal.py  group.py  measurement.py  user.py
backend/tests/unit/: test_health.py
